--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^5.6.2"
   },
   "devDependencies": {
+    "@types/mdx": "^2.0.13",
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "prettier": "^3.3.3",
